// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity matches snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="#"
      >
        <img
          alt=""
          height="40"
          src="logo.png"
          width="115"
        />
      </a>
      <button
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
        className="navbar-toggler"
        data-bs-target="#navbarSupportedContent"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul
          className="navbar-nav me-auto mb-2 mb-lg-0"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              onClick={[Function]}
            >
              Activity
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              id="search"
              onClick={[Function]}
            >
              Search
            </a>
          </li>
          <li
            className="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              className="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="#"
              id="navbarDropdown"
              role="button"
            >
              Todo
            </a>
            <ul
              aria-labelledby="navbarDropdown"
              className="dropdown-menu"
            >
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  My Profile
                </a>
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  New Post
                </a>
              </li>
              <li>
                <hr
                  className="dropdown-divider"
                />
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <span
          className="navbar-text"
        >
          <div
            className="navbar-brand marginleft=100px"
          />
        </span>
        <span
          className="navbar-brand"
        >
          <a
            className="navbar-brand"
            href="http://localhost:3000/profile/null"
          >
            <img
              alt="showcase"
              className="mb-0 rounded-circle border border-light border-2 display: inline"
              style={
                Object {
                  "borderRadius": "50%",
                  "height": "2.7rem",
                  "objectFit": "cover",
                  "width": "2.7rem",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
  </nav>,
  <section
    className="p-5 bg-dark"
  >
    <div
      className="container"
      id="suggestlist"
    >
      <div
        className="container"
      >
        <h1
          className="display-6 text-light text-left mt-5 mb-3"
        >
          You may want to follow...
        </h1>
        <div
          className="example-5 square scrollbar-dusty-grass square thins mb-1"
        >
          <ul
            className="MuiImageList-root MuiImageList-standard css-rvv586-MuiImageList-root"
            style={
              Object {
                "gap": 4,
                "gridTemplateColumns": "repeat(2, 1fr)",
              }
            }
          >
            <li
              className="MuiImageListItem-root MuiImageListItem-standard css-ta95xa-MuiImageListItem-root"
              style={
                Object {
                  "gridColumnEnd": "span 200",
                  "gridRowEnd": "span 1",
                  "height": "auto",
                  "marginBottom": undefined,
                }
              }
            />
          </ul>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <h1
        className="display-6 text-light text-left mb-3"
      >
        Activities
      </h1>
      <div />
    </div>
  </section>,
  <script
    crossOrigin="anonymous"
    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
  />,
]
`;

exports[`App matches snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href=" "
      >
        Navbar
      </a>
      <div
        className="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul
          className="navbar-nav me-auto mb-2 mb-lg-0"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              href="Signup"
            >
              Sign Up
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>,
  <form
    className="pt-8 bg-primary bg-gradient text-light"
    onSubmit={[Function]}
  >
    <div
      className="container"
    >
      <div
        className="row d-md-flex justify-content-between align-items-center mb-3"
      >
        <h3
          className="mb-3 text-light"
        >
          Account
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="uidnote"
            className="form-control"
            data-testid="account"
            id="Username"
            name="username"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            required={true}
            type="text"
            value=""
          />
          <p
            className="offscreen"
            id="uidnote"
          >
            Account wrong or not registered.
            <br />
            Please re-enter or complete registration first.
          </p>
        </div>
        <h3
          className="mb-3 text-light"
        >
          Password
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="inputGroupPrepend2"
            className="form-control"
            data-testid="password"
            id="Pword"
            name="password"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            required={true}
            type="password"
            value=""
          />
          <p
            className="offscreen"
            data-testid="err"
            id="uidnote"
          >
            Wrong password.
          </p>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="d-md-flex align-items-center mb-3"
      >
        <a
          className="link-light"
          data-testid="signup-link"
          href="Signup"
        >
          Sign Up
        </a>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="d-flex justify-content-center"
      >
        <button
          className="btn btn-dark btn-lg"
          id="submitButton"
          onClick={[Function]}
          type="submit"
        >
          LOG IN
        </button>
      </div>
    </div>
    <div />
    <svg
      viewBox="0 0 1440 320"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0,64L24,96C48,128,96,192,144,192C192,192,240,128,288,90.7C336,53,384,43,432,53.3C480,64,528,96,576,101.3C624,107,672,85,720,96C768,107,816,149,864,192C912,235,960,277,1008,293.3C1056,309,1104,299,1152,272C1200,245,1248,203,1296,176C1344,149,1392,139,1416,133.3L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"
        fill="#fff"
        fillOpacity="1"
      />
    </svg>
  </form>,
  <script
    crossOrigin="anonymous"
    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
  />,
]
`;

exports[`CreatePost matches snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="#"
      >
        <img
          alt=""
          height="40"
          src="logo.png"
          width="115"
        />
      </a>
      <button
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
        className="navbar-toggler"
        data-bs-target="#navbarSupportedContent"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul
          className="navbar-nav me-auto mb-2 mb-lg-0"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              onClick={[Function]}
            >
              Activity
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              id="search"
              onClick={[Function]}
            >
              Search
            </a>
          </li>
          <li
            className="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              className="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="#"
              id="navbarDropdown"
              role="button"
            >
              Todo
            </a>
            <ul
              aria-labelledby="navbarDropdown"
              className="dropdown-menu"
            >
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  My Profile
                </a>
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  New Post
                </a>
              </li>
              <li>
                <hr
                  className="dropdown-divider"
                />
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <span
          className="navbar-text"
        >
          <div
            className="navbar-brand marginleft=100px"
          />
        </span>
        <span
          className="navbar-brand"
        >
          <a
            className="navbar-brand"
            href="http://localhost:3000/profile/null"
          >
            <img
              alt="showcase"
              className="mb-0 rounded-circle border border-light border-2 display: inline"
              style={
                Object {
                  "borderRadius": "50%",
                  "height": "2.7rem",
                  "objectFit": "cover",
                  "width": "2.7rem",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
  </nav>,
  <section
    className="p-5"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <div
            className="row"
          >
            <div
              className="col-sm-3 p-2"
            >
              <p
                className="text-center fw-bold"
              >
                UserID
              </p>
               
            </div>
            <div
              className="col-sm-6 p-2"
            />
          </div>
        </div>
      </div>
      <div>
        <h2>
          Create new post
        </h2>
        <form
          onSubmit={[Function]}
        >
          <div>
            Select Image
          </div>
          <input
            data-testid="confirmPostImage"
            name="imageFile"
            placeholder="Please upload an image"
            type="file"
          />
          <input
            aria-label="With textarea"
            className="form-control"
            data-testid="confirmPostText"
            name="postText"
            placeholder="Put what you wanna say here..."
            rows="10"
            type="text"
          />
          <input
            data-testid="submitPost"
            type="submit"
            value="Submit Post"
          />
        </form>
      </div>
    </div>
  </section>,
]
`;

exports[`EditPost matches snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="#"
      >
        <img
          alt=""
          height="40"
          src="logo.png"
          width="115"
        />
      </a>
      <button
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
        className="navbar-toggler"
        data-bs-target="#navbarSupportedContent"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul
          className="navbar-nav me-auto mb-2 mb-lg-0"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              onClick={[Function]}
            >
              Activity
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              id="search"
              onClick={[Function]}
            >
              Search
            </a>
          </li>
          <li
            className="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              className="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="#"
              id="navbarDropdown"
              role="button"
            >
              Todo
            </a>
            <ul
              aria-labelledby="navbarDropdown"
              className="dropdown-menu"
            >
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  My Profile
                </a>
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  New Post
                </a>
              </li>
              <li>
                <hr
                  className="dropdown-divider"
                />
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <span
          className="navbar-text"
        >
          <div
            className="navbar-brand marginleft=100px"
          />
        </span>
        <span
          className="navbar-brand"
        >
          <a
            className="navbar-brand"
            href="http://localhost:3000/profile/null"
          >
            <img
              alt="showcase"
              className="mb-0 rounded-circle border border-light border-2 display: inline"
              style={
                Object {
                  "borderRadius": "50%",
                  "height": "2.7rem",
                  "objectFit": "cover",
                  "width": "2.7rem",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
  </nav>,
  <section
    className="p-5"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <img
            alt="pic"
            className="img-fluid"
            src=""
          />
          <p
            data-testid="detailPostText"
          >
            Content:
          </p>
          <p>
            Post id is
             
          </p>
        </div>
        <div
          className="col"
        >
          <div
            className="row"
          >
            <div
              className="col-sm-3 p-2"
            >
              <h
                className="text-center fw-bold"
              >
                User ID:
              </h>
            </div>
            <div
              className="col-sm-6 p-2"
            >
              <h
                className="text-center fw-bold"
                data-testid="UserName"
              >
                Alex Wang
              </h>
            </div>
          </div>
          <div
            className="row"
          >
            <div>
              <h2>
                UpdatePost
              </h2>
              <form
                onSubmit={[Function]}
              >
                <div>
                  Select Image
                </div>
                <input
                  data-testid="confirmPostImage"
                  name="imageFile"
                  placeholder="Please upload an image"
                  type="file"
                />
                <input
                  aria-label="With textarea"
                  className="form-control"
                  data-testid="confirmPostText"
                  name="postText"
                  placeholder="Put what you wanna say here..."
                  rows="10"
                  type="text"
                />
                <input
                  data-testid="submitPost"
                  type="submit"
                  value="Submit Post"
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`Login matches snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href=" "
      >
        Navbar
      </a>
      <div
        className="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul
          className="navbar-nav me-auto mb-2 mb-lg-0"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              href="Signup"
            >
              Sign Up
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>,
  <form
    className="pt-8 bg-primary bg-gradient text-light"
    onSubmit={[Function]}
  >
    <div
      className="container"
    >
      <div
        className="row d-md-flex justify-content-between align-items-center mb-3"
      >
        <h3
          className="mb-3 text-light"
        >
          Account
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="uidnote"
            className="form-control"
            data-testid="account"
            id="Username"
            name="username"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            required={true}
            type="text"
            value=""
          />
          <p
            className="offscreen"
            id="uidnote"
          >
            Account wrong or not registered.
            <br />
            Please re-enter or complete registration first.
          </p>
        </div>
        <h3
          className="mb-3 text-light"
        >
          Password
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="inputGroupPrepend2"
            className="form-control"
            data-testid="password"
            id="Pword"
            name="password"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            required={true}
            type="password"
            value=""
          />
          <p
            className="offscreen"
            data-testid="err"
            id="uidnote"
          >
            Wrong password.
          </p>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="d-md-flex align-items-center mb-3"
      >
        <a
          className="link-light"
          data-testid="signup-link"
          href="Signup"
        >
          Sign Up
        </a>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="d-flex justify-content-center"
      >
        <button
          className="btn btn-dark btn-lg"
          id="submitButton"
          onClick={[Function]}
          type="submit"
        >
          LOG IN
        </button>
      </div>
    </div>
    <div />
    <svg
      viewBox="0 0 1440 320"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0,64L24,96C48,128,96,192,144,192C192,192,240,128,288,90.7C336,53,384,43,432,53.3C480,64,528,96,576,101.3C624,107,672,85,720,96C768,107,816,149,864,192C912,235,960,277,1008,293.3C1056,309,1104,299,1152,272C1200,245,1248,203,1296,176C1344,149,1392,139,1416,133.3L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"
        fill="#fff"
        fillOpacity="1"
      />
    </svg>
  </form>,
  <script
    crossOrigin="anonymous"
    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
  />,
]
`;

exports[`PostDetail matches snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href="#"
      >
        <img
          alt=""
          height="40"
          src="logo.png"
          width="115"
        />
      </a>
      <button
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
        className="navbar-toggler"
        data-bs-target="#navbarSupportedContent"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul
          className="navbar-nav me-auto mb-2 mb-lg-0"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              onClick={[Function]}
            >
              Activity
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              id="search"
              onClick={[Function]}
            >
              Search
            </a>
          </li>
          <li
            className="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              className="nav-link dropdown-toggle"
              data-bs-toggle="dropdown"
              href="#"
              id="navbarDropdown"
              role="button"
            >
              Todo
            </a>
            <ul
              aria-labelledby="navbarDropdown"
              className="dropdown-menu"
            >
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  My Profile
                </a>
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  New Post
                </a>
              </li>
              <li>
                <hr
                  className="dropdown-divider"
                />
              </li>
              <li>
                <a
                  className="dropdown-item"
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <span
          className="navbar-text"
        >
          <div
            className="navbar-brand marginleft=100px"
          >
            Error
          </div>
        </span>
        <span
          className="navbar-brand"
        >
          <a
            className="navbar-brand"
            href="http://localhost:3000/profile/null"
          >
            <img
              alt="showcase"
              className="mb-0 rounded-circle border border-light border-2 display: inline"
              style={
                Object {
                  "borderRadius": "50%",
                  "height": "2.7rem",
                  "objectFit": "cover",
                  "width": "2.7rem",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
  </nav>,
  <section
    className="p-5"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <img
            alt="pic"
            className="img-fluid"
            src=""
          />
        </div>
        <div
          className="col"
        >
          <div
            className="row"
          >
            <div
              className="col-sm-3 p-2"
            >
              <a
                href="http://localhost:3000/profile/undefined"
              >
                <img
                  alt="showcase"
                  loading="lazy"
                  src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/971.jpg"
                  style={
                    Object {
                      "borderRadius": "50%",
                      "height": "5rem",
                      "objectFit": "cover",
                      "width": "5rem",
                    }
                  }
                />
              </a>
              <p
                className="text-center"
              >
                Poster:
                username1
              </p>
              <h2
                className="text-center"
                data-testid="detailPostText"
              >
                username1
                : 
              </h2>
            </div>
            <div
              className="container mb-3"
            >
              <h3
                className="display-10 text-dark text-left mt-5 mb-2"
              >
                Comments
              </h3>
            </div>
            <div />
            <div
              className="mb-3"
            >
              <form
                id="commentbox"
                onSubmit={[Function]}
              >
                <div
                  className="container mb-3"
                >
                  <div
                    style={
                      Object {
                        "overflowY": "visible",
                        "position": "relative",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundColor": "#fff",
                          "fontFamily": "monospace",
                          "fontSize": 14,
                          "fontWeight": "normal",
                          "minHeight": 63,
                        }
                      }
                    >
                      <div
                        style={
                          Object {
                            "border": "1px solid transparent",
                            "boxSizing": "border-box",
                            "color": "transparent",
                            "overflow": "hidden",
                            "padding": 9,
                            "position": "relative",
                            "textAlign": "start",
                            "whiteSpace": "pre-wrap",
                            "width": "100%",
                            "wordWrap": "break-word",
                          }
                        }
                      >
                         
                      </div>
                      <textarea
                        onBlur={[Function]}
                        onChange={[Function]}
                        onCompositionEnd={[Function]}
                        onCompositionStart={[Function]}
                        onKeyDown={[Function]}
                        onScroll={[Function]}
                        onSelect={[Function]}
                        placeholder="Add your comment..."
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "border": "1px solid silver",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "fontFamily": "inherit",
                            "fontSize": "inherit",
                            "height": "100%",
                            "left": 0,
                            "letterSpacing": "inherit",
                            "margin": 0,
                            "overflow": "hidden",
                            "padding": 9,
                            "position": "absolute",
                            "resize": "none",
                            "top": 0,
                            "width": "100%",
                          }
                        }
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="container"
                >
                  <div
                    className="d-flex justify-content-center"
                  >
                    <button
                      className="btn btn-primary btn-lg"
                      type="submit"
                    >
                      Add New Comment
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`Signup matches snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow"
  >
    <div
      className="container-fluid"
    >
      <a
        className="navbar-brand"
        href=" "
      >
        Navbar
      </a>
      <div
        className="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <ul
          className="navbar-nav me-auto mb-2 mb-lg-0"
        >
          <li
            className="nav-item"
          >
            <a
              aria-current="page"
              className="nav-link active"
              href="Login"
            >
              Log In
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>,
  <section
    className="pt-8 bg-primary bg-gradient text-light"
  >
    <p
      aria-live="assertive"
      className="offscreen"
    />
    <div
      className="container"
    >
      <form
        className="row d-md-flex justify-content-between align-items-center mb-3"
        id="info"
        onSubmit={[Function]}
      >
        <h3
          className="mb-3 text-light"
        >
          Account
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="uidnote"
            aria-invalid="true"
            autoComplete="off"
            className="form-control"
            data-testid="account"
            id="username"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            required={true}
            type="text"
            value=""
          />
          <p
            className="offscreen"
            id="uidnote"
          >
            4 to 24 characters.
            <br />
            Must begin with a letter.
            <br />
            Letters, numbers, underscores, hyphens allowed.
          </p>
        </div>
        <h3
          className="mb-3 text-light"
        >
          Username
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="uidnote"
            aria-invalid="true"
            autoComplete="off"
            className="form-control"
            data-testid="name"
            id="definename"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Username"
            required={true}
            type="text"
            value=""
          />
          <p
            className="offscreen"
            id="uidnote"
          >
            Cannot be empty.
          </p>
        </div>
        <h3
          className="mb-3 text-light"
        >
          Password
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="pwdnote"
            aria-invalid="true"
            className="form-control"
            data-testid="password"
            id="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Enter Password"
            required={true}
            type="password"
            value=""
          />
          <p
            className="offscreen"
            id="pwdnote"
          >
            8 to 24 characters.
            <br />
            Must include uppercase and lowercase letters, a number and a special character.
            <br />
            Allowed special characters:
             
            <span
              aria-label="exclamation mark"
            >
              !
            </span>
             
            <span
              aria-label="at symbol"
            >
              @
            </span>
             
            <span
              aria-label="hashtag"
            >
              #
            </span>
             
            <span
              aria-label="dollar sign"
            >
              $
            </span>
             
            <span
              aria-label="percent"
            >
              %
            </span>
          </p>
        </div>
        <h3
          className="mb-3 text-light"
        >
          Confirm Password
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium hide css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </h3>
        <div
          className="input-group news-input"
        >
          <input
            aria-describedby="confirmnote"
            aria-invalid="true"
            className="form-control"
            data-testid="comfirm-password"
            id="confirm_pwd"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Re-enter Password"
            required={true}
            type="password"
            value=""
          />
          <p
            className="offscreen"
            id="confirmnote"
          >
            Must match the first password input field.
          </p>
        </div>
        <div
          className="d-flex justify-content-center"
        >
          <button
            className="btn btn-dark btn-lg"
            disabled={true}
            type="submit"
          >
            SIGN UP
          </button>
        </div>
      </form>
    </div>
    <svg
      viewBox="0 0 1440 320"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0,64L24,96C48,128,96,192,144,192C192,192,240,128,288,90.7C336,53,384,43,432,53.3C480,64,528,96,576,101.3C624,107,672,85,720,96C768,107,816,149,864,192C912,235,960,277,1008,293.3C1056,309,1104,299,1152,272C1200,245,1248,203,1296,176C1344,149,1392,139,1416,133.3L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"
        fill="#fff"
        fillOpacity="1"
      />
    </svg>
  </section>,
]
`;

exports[`SuggestList matches snapshot 1`] = `
<div
  className="container"
>
  <h1
    className="display-6 text-light text-left mt-5 mb-3"
  >
    You may want to follow...
  </h1>
  <div
    className="example-5 square scrollbar-dusty-grass square thins mb-1"
  >
    <ul
      className="MuiImageList-root MuiImageList-standard css-rvv586-MuiImageList-root"
      style={
        Object {
          "gap": 4,
          "gridTemplateColumns": "repeat(2, 1fr)",
        }
      }
    >
      <li
        className="MuiImageListItem-root MuiImageListItem-standard css-ta95xa-MuiImageListItem-root"
        style={
          Object {
            "gridColumnEnd": "span 200",
            "gridRowEnd": "span 1",
            "height": "auto",
            "marginBottom": undefined,
          }
        }
      />
    </ul>
  </div>
</div>
`;
